# MobileCloudComputing-Task-Scheduler

./: CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt  main.cpp
cmake/: ConfigSafeGuards.cmake  LTO.cmake  Sanitizers.cmake  Warnings.cmake
configured/: CMakeLists.txt
